utils to set up super admin for the first time. clear the database.
